--- a/index.html
+++ b/index.html
@@ -11,6 +11,14 @@
 </head>
 <body>
 
+    <header class="banner">
+    <img src="banner.png" alt="Banner de Papelería" class="banner-img">
+    <div class="banner-text">
+        <h1>Bienvenidos a Papel & Tinta</h1>
+        <p>Los mejores artículos de papelería para todos los gustos</p>
+    </div>
+</header>
+    
     <div class="wrapper">
         <header class="header-mobile">
             <h1 class="logo">Papel&Tinta</h1>
