cambiamos el contador de visitas

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <!-- Footer -->
 <footer class="main-footer">
   <div class="footer-contenido">
-    <p>Visitas: <span id="contador-visitas">Cargando...</span></p>
+    <p>Visitas: <span id="contador-visitas">...</span></p>
     <p>© 2025 Papel&Tinta</p>
   </div>
 </footer>
