--- a/index.html
+++ b/index.html
@@ -85,10 +85,13 @@
 <!-- Footer -->
 <footer class="main-footer">
   <div class="footer-contenido">
-    <p>Visitas: <span id="contador-visitas">...</span></p>
-    <p>© 2025 Papel&Tinta</p>
+    <p>© 2025 Papel&Tinta. Todos los derechos reservados.</p>
+    <p>Contador de visitas:</p>
+   <a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis para blog"><img src="https://counter1.optistats.ovh/private/contadorvisitasgratis.php?c=3lh994qd76yyyfxuu3h62hlk9qmq3zrb" border="0" title="contador de visitas gratis para blog" alt="contador de visitas gratis para blog"></a>
   </div>
 </footer>
+
+
 
 <!-- Chat flotante -->
 <div class="chat-flotante">
