--- a/politicas.html
+++ b/politicas.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Políticas - Papel&Tinta</title>
   <link rel="stylesheet" href="./css/main.css" />
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
+
 </head>
 <body>
   <header class="main-header">
@@ -59,8 +61,17 @@
  <!-- Footer -->
 <footer class="main-footer">
   <div class="footer-contenido">
-    <p>Visitas: <span id="contador-visitas">Cargando...</span></p>
-    <p>© 2025 Papel&Tinta</p>
+     <p class="texto-derechos">© 2025 Papel&Tinta. Todos los derechos reservados.</p>
+    <p>Contador de visitas:</p>
+   <a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis para blog"><img src="https://counter1.optistats.ovh/private/contadorvisitasgratis.php?c=3lh994qd76yyyfxuu3h62hlk9qmq3zrb" border="0" title="contador de visitas gratis para blog" alt="contador de visitas gratis para blog"></a>
+  </div>
+  <div class="redes-sociales">
+      <a href="https://www.facebook.com/tuPagina" target="_blank" aria-label="Facebook">
+        <i class="bi bi-facebook"></i>
+      </a>
+      <a href="https://www.instagram.com/tuPagina" target="_blank" aria-label="Instagram">
+        <i class="bi bi-instagram"></i>
+      </a>
   </div>
 </footer>
 
