--- a/index.html
+++ b/index.html
@@ -89,6 +89,14 @@
     <p>Contador de visitas:</p>
    <a href="https://www.contadorvisitasgratis.com" title="contador de visitas gratis para blog"><img src="https://counter1.optistats.ovh/private/contadorvisitasgratis.php?c=3lh994qd76yyyfxuu3h62hlk9qmq3zrb" border="0" title="contador de visitas gratis para blog" alt="contador de visitas gratis para blog"></a>
   </div>
+  <div class="redes-sociales">
+      <a href="https://www.facebook.com/Pluma&Papel" target="_blank" aria-label="Facebook">
+        <i class="bi bi-facebook"></i>
+      </a>
+      <a href="https://www.instagram.com/Pluma&Papel" target="_blank" aria-label="Instagram">
+        <i class="bi bi-instagram"></i>
+      </a>
+  </div>
 </footer>
 
 
